Changed code to work with java 15